Complete billing system web implementation