@@ -8,49 +8,56 @@ import com.syos.domain.enums.UserRole;
 import com.syos.domain.exception.DatabaseOperationException;
 import com.syos.adapter.out.DatabaseSpecificAdaptors.repository.EmployeeRepository;
 import com.syos.adapter.out.DatabaseSpecificAdaptors.repository.OnlineUserRepository;
-import com.syos.adapter.out.util.PasswordUtil; // Ensure this import is correct
-import java.util.Optional;
+import com.syos.adapter.out.util.PasswordUtil;
 
+import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+
+/**
+ * Auth service with async support
+ * Design: Strategy Pattern (interface + implementation)
+ */
 public class AuthenticationServiceImplementation implements AuthenticationService {
 
-    private final OnlineUserRepository onlineUserRepository;
-    private final EmployeeRepository employeeRepository;
+    private final OnlineUserRepository onlineRepo;
+    private final EmployeeRepository employeeRepo;
+    private final ExecutorService executor;
 
-    public AuthenticationServiceImplementation(OnlineUserRepository onlineUserRepository, EmployeeRepository employeeRepository) {
-        this.onlineUserRepository = onlineUserRepository;
-        this.employeeRepository = employeeRepository;
+    public AuthenticationServiceImplementation(OnlineUserRepository onlineRepo, EmployeeRepository employeeRepo) {
+        this.onlineRepo = onlineRepo;
+        this.employeeRepo = employeeRepo;
+        int threads = Runtime.getRuntime().availableProcessors() * 4; // tune for load
+        this.executor = Executors.newFixedThreadPool(threads);
     }
 
+    /** Async login */
+    public CompletableFuture<Optional<AuthenticatedUser>> authenticateAsync(String user, String pass) {
+        return CompletableFuture.supplyAsync(() -> {
+            try { return authenticate(user, pass); }
+            catch (DatabaseOperationException e) { e.printStackTrace(); return Optional.empty(); }
+        }, executor);
+    }
+
+    /** Sync login */
     @Override
-    public Optional<AuthenticatedUser> authenticate(String username, String password) throws DatabaseOperationException {
-        if (username == null || username.trim().isEmpty() || password == null || password.isEmpty()) {
-            return Optional.empty();
+    public Optional<AuthenticatedUser> authenticate(String user, String pass) throws DatabaseOperationException {
+        if (user == null || user.isBlank() || pass == null || pass.isEmpty()) return Optional.empty();
+
+        Optional<Employee> empOpt = employeeRepo.findByUsername(user);
+        if (empOpt.isPresent() && PasswordUtil.verifyPassword(pass, empOpt.get().getPasswordHash())) {
+            return Optional.of(new AuthenticatedUser(empOpt.get().getEmployeeId(), user, UserRole.STAFF));
         }
 
-        // First, check if the user is an employee
-        Optional<Employee> employeeOpt = employeeRepository.findByUsername(username);
-        if (employeeOpt.isPresent()) {
-            Employee employee = employeeOpt.get();
-            // Password verification using the utility class
-            if (PasswordUtil.verifyPassword(password, employee.getPasswordHash())) {
-                // Note: Your app currently maps all authenticated employees to UserRole.STAFF.
-                // If you need specific 'admin' role (which you likely do for an admin),
-                // you would modify the AuthenticatedUser to store the actual role from the Employee entity
-                // and use it here (e.g., employee.getRole() if it's available).
-                return Optional.of(new AuthenticatedUser(employee.getEmployeeId(), employee.getUsername(), UserRole.STAFF));
-            }
-        }
-
-        // If not an employee, check if they are an online customer
-        Optional<OnlineUser> customerOpt = onlineUserRepository.findByUsername(username);
-        if (customerOpt.isPresent()) {
-            OnlineUser customer = customerOpt.get();
-            // Password verification using the utility class
-            if (PasswordUtil.verifyPassword(password, customer.getPasswordHash())) {
-                return Optional.of(new AuthenticatedUser(customer.getUserId(), customer.getUsername(), UserRole.CUSTOMER));
-            }
+        Optional<OnlineUser> custOpt = onlineRepo.findByUsername(user);
+        if (custOpt.isPresent() && PasswordUtil.verifyPassword(pass, custOpt.get().getPasswordHash())) {
+            return Optional.of(new AuthenticatedUser(custOpt.get().getUserId(), user, UserRole.CUSTOMER));
         }
 
         return Optional.empty();
     }
+
+    /** Stop thread pool */
+    public void shutdown() { executor.shutdown(); }
 }
